--- a/1-Java基础/1-00【Java基础1】.md
+++ b/1-Java基础/1-00【Java基础1】.md
@@ -745,6 +745,12 @@ public static void main(String[] args) {
 
 ```
 
+**打印数组**
+
+1. for循环
+2. for-each循环
+3. Array.toString(arr)
+
 ## 3.5 数组作为方法参数
 
 数组作为方法参数传递，传递的参数是数组内存的地址。
