--- a/1-Java基础/1-02【集合】.md
+++ b/1-Java基础/1-02【集合】.md
@@ -285,6 +285,11 @@ E elementData(int index) {
 
 ## 1.2 Queue接口
 
+常用方法：
+
+* 队列：`offer poll peek`返回false、`add remove element`抛异常(最好不要使用)
+* 栈：`push pop peek`
+
 队列`Queue`是一种经常使用的集合。`Queue`实际上是实现了一个先进先出`FIFO：First In First Out`的有序表。它和`List`的区别在于：`List`可以在任意位置添加和删除元素、`Queue`只能把元素添加到队列末尾或者从队列头部取出元素。
 
 在Java的标准库中，队列接口`Queue`定义了以下几个方法：
@@ -438,11 +443,11 @@ d2.offerLast("z");
 
 `Stack`只有入栈和出栈的操作。在Java中，我们用`Deque`可以实现`Stack`的功能。为什么Java的集合类没有单独的`Stack`接口呢？因为有个遗留类名字就叫`Stack`，出于兼容性考虑，所以没办法创建`Stack`接口，只能用`Deque`接口来“模拟”一个`Stack`了。
 
-| 方法                  | 作用               |
-| --------------------- | ------------------ |
-| push(E) / addFirst(E) | 把元素压栈         |
-| pop() / removeFirst() | 取栈顶元素并且弹出 |
-| peek() / peekFirst()  | 取栈顶元素但不弹出 |
+| 方法    | 作用               |
+| ------- | ------------------ |
+| push(E) | 把元素压栈         |
+| pop()   | 取栈顶元素并且弹出 |
+| peek()  | 取栈顶元素但不弹出 |
 
 当我们把`Deque`作为`Stack`使用时，注意只调用`push()`/`pop()`/`peek()`方法，不要调用`addFirst()`/`removeFirst()`/`peekFirst()`方法，这样代码更加清晰。
 
